# Handwritten-Text

./: .env.example  .gitignore  .replit  LICENSE  README.md  main.py  package-lock.json  pyproject.toml  replit.md  run_frontend.sh
backend/: agent.py  main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: FileUpload.css  FileUpload.jsx  ResultDisplay.css  ResultDisplay.jsx
