[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "langfuse>=3.9.3",
    "openai>=2.8.0",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
